# programming_formalisms_project_summer_2026

./: .gitignore  .wordlist.txt  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml
.github/workflows/: check_code_style.yaml  check_links.yaml  check_markdown.yaml  check_package.yaml  check_spelling.yaml  measure_code_coverage.yml
data/: README.md
data/2025_bjoern/: smhi-opendata_1_180960_20251024_160026.csv
docs/: README.md  requirements.md
learners/: CITATION.cff  README-EXT.md  README.md  sven.md
learners/richel/: README.md  __init__.py  assert.py  fairytale.txt  my_assert.py
scripts/: install_this_package.sh  run_console.sh  run_tests.sh
src/: README.md
src/example/: __init__.py  analysis.py
src/learners/: README.md  __init__.py  richel.py
src/weather/: analysis.py  reader.py
tests/: README.md  __init__.py  test_analysis.py  test_richel.py
