[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]

[project]
name = "uppsalaweathersummer2026"
version = "0.1"
authors = [
  { name="Richèl Bilderbeek", email="rjcbilderbeek@gmail.com" },
]
description = "The Programming Formalisms course learners project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/programming-formalisms/programming_formalisms_project_summer_2026"
"Bug Tracker" = "https://github.com/programming-formalisms/programming_formalisms_project_summer_2026/issues"

[tool.ruff]
    lint.select = ["ALL"]
    lint.ignore = ["ANN", "PT", "PTH", "D211", "D213", "S101", "B006"]

[tool.hatch.build.targets.sdist]
include = [
  "/data",
  "/src",
  "/tests",
]

# From https://wersdoerfer.de/blogs/ephes_blog/how-to-add-extra-data-to-a-python-package/
# [tool.hatch.build.targets.sdist.force-include]
# "data" = "/data"  # Include the fixtures directory in the sdist

# From https://wersdoerfer.de/blogs/ephes_blog/how-to-add-extra-data-to-a-python-package/
# [tool.hatch.build.targets.wheel.force-include]
# "data" = "/data"  # Include the fixtures directory in the wheel
